--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Paul's Gamerzone – Ticket System</title>
-  <link rel="icon" type="image/png" href="gamerzone-logo.png">
+  <link rel="icon" type="image/png" href="gamerzone-logo.PNG">
   <style>
     :root {
       --gz-red: #E2261C;
@@ -96,7 +96,7 @@
 <body>
 
   <div class="logo-wrap">
-    <img src="gamerzone-logo.png" alt="Gamerzone Logo">
+    <img src="gamerzone-logo.PNG" alt="Gamerzone Logo">
   </div>
 
   <h1>Paul’s Gamerzone</h1>
