--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -43,7 +43,7 @@
         <!-- Header -->
         <div class="header">
           <div class="logo-wrap">
-            <img src="gamerzone-logo.png" alt="Paul's Gamerzone Logo">
+            <img src="gamerzone-logo.PNG" alt="Paul's Gamerzone Logo">
           </div>
           <div class="header-main">
             <div class="brand-name">
