--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Paul's Gamerzone – Ticket System</title>
-  <link rel="icon" type="image/png" href="gamerzone-logo.PNG">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="gamerzone-logo.png">
   <style>
     :root {
       --gz-red: #E2261C;
