--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Paul's Gamerzone – Repair Tickets</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <script src="tickets.js" defer></script>
 </head>
