--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ticket-type="repair" data-ticket-label="Console">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Paul's Gamerzone – Repair Tickets</title>
