--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Paul's Gamerzone – Ticket System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="gamerzone-logo.png">
+  <link rel="icon" type="image/png" href="gamerzone-logo.PNG">
+  <link rel="apple-touch-icon" href="apple-touch-icon.PNG">
   <style>
     :root {
       --gz-red: #E2261C;
