--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <script src="tickets.js" defer></script>
+  <link rel="apple-touch-icon" href="apple-touch-icon.PNG">
 </head>
 <body data-ticket-type="repair" data-ticket-label="Console">
 <div class="app-shell">
