--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -34,11 +34,13 @@
       <div class="brand-mini">
         PAUL’S <span>GAMERZONE</span> • Repair Tickets
       </div>
-      <div class="toolbar">
-        <button type="button" class="secondary" id="saveTicketBtn">💾 Save Ticket (JSON)</button>
-        <button type="button" onclick="window.print()">🖨 Print / Save as PDF</button>
-      </div>
-    </div>
+<div class="toolbar">
+  <button type="button" class="secondary" onclick="window.location.href='index.html'">
+    ⬅ Back to Menu
+  </button>
+  <button type="button" class="secondary" id="saveTicketBtn">💾 Save Ticket (JSON)</button>
+  <button type="button" onclick="window.print()">🖨 Print / Save as PDF</button>
+</div>
 
     <div class="card">
       <div class="card-inner">
