--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -41,7 +41,8 @@
   <button type="button" class="secondary" id="saveTicketBtn">💾 Save Ticket (JSON)</button>
   <button type="button" onclick="window.print()">🖨 Print / Save as PDF</button>
 </div>
-
+    </div>
+    
     <div class="card">
       <div class="card-inner">
         <!-- Header -->
