--- a/repair-tickets.html
+++ b/repair-tickets.html
@@ -84,7 +84,7 @@
 
         <!-- FORM -->
         <form id="ticketForm">
-          <!-- Customer Info -->
+          <!-- 1. Customer Info -->
           <div class="section">
             <div class="section-header">
               <div class="section-title">1. Customer Information</div>
@@ -112,86 +112,93 @@
             </div>
           </div>
 
-          <!-- Device Info -->
+          <!-- 2. Device Info -->
           <div class="section">
             <div class="section-header">
               <div class="section-title">2. Device Information</div>
               <div class="section-pill">Console</div>
             </div>
+
             <div class="field-row">
               <div class="field">
-<div class="field-label">Console Type</div>
-  <select name="console_type">
-    <option value="" selected disabled>Select console...</option>
+                <div class="field-label">Console Type</div>
+                <select name="console_type">
+                  <option value="" selected disabled>Select console...</option>
 
-    <optgroup label="Sony / PlayStation">
-      <option value="PlayStation (PS1)">PlayStation (PS1)</option>
-      <option value="PlayStation 2 (PS2)">PlayStation 2 (PS2)</option>
-      <option value="PlayStation 3 (PS3) Fat">PlayStation 3 (PS3) Fat</option>
-      <option value="PlayStation 3 (PS3) Slim">PlayStation 3 (PS3) Slim</option>
-      <option value="PlayStation 3 (PS3) Super Slim">PlayStation 3 (PS3) Super Slim</option>
-      <option value="PlayStation 4 (PS4)">PlayStation 4 (PS4)</option>
-      <option value="PlayStation 4 Slim">PlayStation 4 Slim</option>
-      <option value="PlayStation 4 Pro">PlayStation 4 Pro</option>
-      <option value="PlayStation 5 (PS5)">PlayStation 5 (PS5)</option>
-      <option value="PlayStation 5 Slim">PlayStation 5 Slim</option>
-      <option value="PSP">PSP</option>
-      <option value="PSP Go">PSP Go</option>
-      <option value="PS Vita">PS Vita</option>
-      <option value="PlayStation TV">PlayStation TV</option>
-    </optgroup>
+                  <optgroup label="Sony / PlayStation">
+                    <option value="PlayStation (PS1)">PlayStation (PS1)</option>
+                    <option value="PlayStation 2 (PS2)">PlayStation 2 (PS2)</option>
+                    <option value="PlayStation 3 (PS3) Fat">PlayStation 3 (PS3) Fat</option>
+                    <option value="PlayStation 3 (PS3) Slim">PlayStation 3 (PS3) Slim</option>
+                    <option value="PlayStation 3 (PS3) Super Slim">PlayStation 3 (PS3) Super Slim</option>
+                    <option value="PlayStation 4 (PS4)">PlayStation 4 (PS4)</option>
+                    <option value="PlayStation 4 Slim">PlayStation 4 Slim</option>
+                    <option value="PlayStation 4 Pro">PlayStation 4 Pro</option>
+                    <option value="PlayStation 5 (PS5)">PlayStation 5 (PS5)</option>
+                    <option value="PlayStation 5 Slim">PlayStation 5 Slim</option>
+                    <option value="PSP">PSP</option>
+                    <option value="PSP Go">PSP Go</option>
+                    <option value="PS Vita">PS Vita</option>
+                    <option value="PlayStation TV">PlayStation TV</option>
+                  </optgroup>
 
-    <optgroup label="Microsoft / Xbox">
-      <option value="Xbox (Original)">Xbox (Original)</option>
-      <option value="Xbox 360">Xbox 360</option>
-      <option value="Xbox 360 S (Slim)">Xbox 360 S (Slim)</option>
-      <option value="Xbox 360 E">Xbox 360 E</option>
-      <option value="Xbox One">Xbox One</option>
-      <option value="Xbox One S">Xbox One S</option>
-      <option value="Xbox One X">Xbox One X</option>
-      <option value="Xbox Series S">Xbox Series S</option>
-      <option value="Xbox Series X">Xbox Series X</option>
-    </optgroup>
+                  <optgroup label="Microsoft / Xbox">
+                    <option value="Xbox (Original)">Xbox (Original)</option>
+                    <option value="Xbox 360">Xbox 360</option>
+                    <option value="Xbox 360 S (Slim)">Xbox 360 S (Slim)</option>
+                    <option value="Xbox 360 E">Xbox 360 E</option>
+                    <option value="Xbox One">Xbox One</option>
+                    <option value="Xbox One S">Xbox One S</option>
+                    <option value="Xbox One X">Xbox One X</option>
+                    <option value="Xbox Series S">Xbox Series S</option>
+                    <option value="Xbox Series X">Xbox Series X</option>
+                  </optgroup>
 
-    <optgroup label="Nintendo – Home Consoles">
-      <option value="NES">Nintendo Entertainment System (NES)</option>
-      <option value="SNES">Super Nintendo (SNES)</option>
-      <option value="Nintendo 64">Nintendo 64</option>
-      <option value="GameCube">Nintendo GameCube</option>
-      <option value="Wii">Nintendo Wii</option>
-      <option value="Wii U">Nintendo Wii U</option>
-      <option value="Switch">Nintendo Switch</option>
-      <option value="Switch Lite">Nintendo Switch Lite</option>
-      <option value="Switch OLED">Nintendo Switch OLED</option>
-      <option value="Switch 2">Nintendo Switch 2</option>
-    </optgroup>
+                  <optgroup label="Nintendo – Home Consoles">
+                    <option value="NES">Nintendo Entertainment System (NES)</option>
+                    <option value="SNES">Super Nintendo (SNES)</option>
+                    <option value="Nintendo 64">Nintendo 64</option>
+                    <option value="GameCube">Nintendo GameCube</option>
+                    <option value="Wii">Nintendo Wii</option>
+                    <option value="Wii U">Nintendo Wii U</option>
+                    <option value="Switch">Nintendo Switch</option>
+                    <option value="Switch Lite">Nintendo Switch Lite</option>
+                    <option value="Switch OLED">Nintendo Switch OLED</option>
+                    <option value="Switch 2">Nintendo Switch 2</option>
+                  </optgroup>
 
-    <optgroup label="Nintendo – Handhelds">
-      <option value="Game Boy">Game Boy</option>
-      <option value="Game Boy Pocket">Game Boy Pocket</option>
-      <option value="Game Boy Color">Game Boy Color</option>
-      <option value="Game Boy Advance">Game Boy Advance</option>
-      <option value="Game Boy Advance SP">Game Boy Advance SP</option>
-      <option value="Game Boy Micro">Game Boy Micro</option>
-      <option value="Nintendo DS">Nintendo DS</option>
-      <option value="Nintendo DS Lite">Nintendo DS Lite</option>
-      <option value="Nintendo DSi">Nintendo DSi</option>
-      <option value="Nintendo DSi XL">Nintendo DSi XL</option>
-      <option value="Nintendo 3DS">Nintendo 3DS</option>
-      <option value="Nintendo 3DS XL">Nintendo 3DS XL</option>
-      <option value="Nintendo 2DS">Nintendo 2DS</option>
-      <option value="Nintendo 2DS XL">Nintendo 2DS XL</option>
-    </optgroup>
+                  <optgroup label="Nintendo – Handhelds">
+                    <option value="Game Boy">Game Boy</option>
+                    <option value="Game Boy Pocket">Game Boy Pocket</option>
+                    <option value="Game Boy Color">Game Boy Color</option>
+                    <option value="Game Boy Advance">Game Boy Advance</option>
+                    <option value="Game Boy Advance SP">Game Boy Advance SP</option>
+                    <option value="Game Boy Micro">Game Boy Micro</option>
+                    <option value="Nintendo DS">Nintendo DS</option>
+                    <option value="Nintendo DS Lite">Nintendo DS Lite</option>
+                    <option value="Nintendo DSi">Nintendo DSi</option>
+                    <option value="Nintendo DSi XL">Nintendo DSi XL</option>
+                    <option value="Nintendo 3DS">Nintendo 3DS</option>
+                    <option value="Nintendo 3DS XL">Nintendo 3DS XL</option>
+                    <option value="Nintendo 2DS">Nintendo 2DS</option>
+                    <option value="Nintendo 2DS XL">Nintendo 2DS XL</option>
+                  </optgroup>
 
-    <optgroup label="Other / Custom">
-      <option value="PC / Gaming Desktop">PC / Gaming Desktop</option>
-      <option value="Gaming Laptop">Gaming Laptop</option>
-      <option value="Arcade / Cabinet">Arcade / Cabinet</option>
-      <option value="Other (see notes)">Other (see notes)</option>
-    </optgroup>
-  </select>
-</div>
+                  <optgroup label="Other / Custom">
+                    <option value="PC / Gaming Desktop">PC / Gaming Desktop</option>
+                    <option value="Gaming Laptop">Gaming Laptop</option>
+                    <option value="Arcade / Cabinet">Arcade / Cabinet</option>
+                    <option value="Other (see notes)">Other (see notes)</option>
+                  </optgroup>
+                </select>
+              </div>
+
+              <div class="field">
+                <div class="field-label">Model</div>
+                <input type="text" name="console_model">
+              </div>
             </div>
+
             <div class="field-row">
               <div class="field">
                 <div class="field-label">Serial Number</div>
@@ -203,57 +210,59 @@
               </div>
             </div>
           </div>
-          <!-- Repair Type / Status -->
-<div class="section">
-  <div class="section-header">
-    <div class="section-title">3. Repair Details</div>
-    <div class="section-pill">Repair</div>
-  </div>
 
-  <div class="field-row">
-    <div class="field">
-      <div class="field-label">Common Repair Type</div>
-      <select name="repair_type">
-        <option value="">(Select if applicable)</option>
-        <option>HDMI port replacement</option>
-        <option>Power supply / no power</option>
-        <option>Fan cleaning / overheating</option>
-        <option>Disk drive / Blu-ray not reading</option>
-        <option>SSD / storage failure or upgrade</option>
-        <option>USB / controller port issue</option>
-        <option>Wi-Fi / network connectivity issue</option>
-        <option>System software reinstall / OS repair</option>
-        <option>Motherboard / board-level repair</option>
-        <option>Other / see notes</option>
-      </select>
-    </div>
-
-    <div class="field">
-      <div class="field-label">Priority</div>
-      <select name="priority">
-        <option value="Normal" selected>Normal</option>
-        <option value="Rush">Rush</option>
-        <option value="Low">Low</option>
-      </select>
-    </div>
-
-    <div class="field">
-      <div class="field-label">Status</div>
-      <select name="status">
-        <option value="Draft" selected>Draft</option>
-        <option value="Checked In">Checked In</option>
-        <option value="In Progress">In Progress</option>
-        <option value="Waiting on Parts">Waiting on Parts</option>
-        <option value="Ready for Pickup">Ready for Pickup</option>
-        <option value="Closed">Closed</option>
-      </select>
-    </div>
-  </div>
-</div>
-          <!-- Issue Description -->
+          <!-- 3. Repair Type / Status -->
           <div class="section">
             <div class="section-header">
-              <div class="section-title">3. Issue Description</div>
+              <div class="section-title">3. Repair Details</div>
+              <div class="section-pill">Repair</div>
+            </div>
+
+            <div class="field-row">
+              <div class="field">
+                <div class="field-label">Common Repair Type</div>
+                <select name="repair_type">
+                  <option value="">(Select if applicable)</option>
+                  <option>HDMI port replacement</option>
+                  <option>Power supply / no power</option>
+                  <option>Fan cleaning / overheating</option>
+                  <option>Disk drive / Blu-ray not reading</option>
+                  <option>SSD / storage failure or upgrade</option>
+                  <option>USB / controller port issue</option>
+                  <option>Wi-Fi / network connectivity issue</option>
+                  <option>System software reinstall / OS repair</option>
+                  <option>Motherboard / board-level repair</option>
+                  <option>Other / see notes</option>
+                </select>
+              </div>
+
+              <div class="field">
+                <div class="field-label">Priority</div>
+                <select name="priority">
+                  <option value="Normal" selected>Normal</option>
+                  <option value="Rush">Rush</option>
+                  <option value="Low">Low</option>
+                </select>
+              </div>
+
+              <div class="field">
+                <div class="field-label">Status</div>
+                <select name="status">
+                  <option value="Draft" selected>Draft</option>
+                  <option value="Checked In">Checked In</option>
+                  <option value="In Progress">In Progress</option>
+                  <option value="Waiting on Parts">Waiting on Parts</option>
+                  <option value="Ready for Pickup">Ready for Pickup</option>
+                  <option value="Closed">Closed</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <!-- 4. Issue Description -->
+          <div class="section">
+            <div class="section-header">
+              <div class="section-title">4. Issue Description</div>
               <div class="section-pill">Customer</div>
             </div>
             <div class="field">
@@ -262,10 +271,10 @@
             </div>
           </div>
 
-          <!-- Tech Findings -->
+          <!-- 5. Tech Findings -->
           <div class="section">
             <div class="section-header">
-              <div class="section-title">4. Technician Findings & Work Performed</div>
+              <div class="section-title">5. Technician Findings & Work Performed</div>
               <div class="section-pill">Tech</div>
             </div>
             <div class="field">
@@ -278,10 +287,10 @@
             </div>
           </div>
 
-          <!-- Pricing & Approval -->
+          <!-- 6. Pricing & Approval -->
           <div class="section">
             <div class="section-header">
-              <div class="section-title">5. Pricing & Approval</div>
+              <div class="section-title">6. Pricing & Approval</div>
               <div class="section-pill">Value</div>
             </div>
             <div class="field-row">
